--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     window.onload = function() {
 
       const ui = SwaggerUIBundle({
-        url: "openapi.yml",
+        url: "Lab01-1.0.0.yaml",
         dom_id: "#LAB02-oAuth",
         deepLinking: true,
       })
